--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Home - AbsurdStudios</title>
+  <link rel="stylesheet" href="https://absurdstudios.github.io/main.css">
 </head>
 <body>
 <h1>Success</h1>
