--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="page_type" content="np-template-header-footer-from-plugin">
 	  <title>Home - AbsurdStudios</title>
 <link rel="stylesheet" href="Home.css" media="screen">
+	  <link rel="stylesheet" href="main2.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="main2.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
@@ -29,7 +30,7 @@
     <meta property="og:url" content="index.html">
   </head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-3142"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="150" data-image-height="150">
+        <a href="https://absurdstudios.github.io" class="u-image u-logo u-image-1" data-image-width="150" data-image-height="150">
           <img src="images/0dfbdc0ea33e28659ce19b47ddbaf280.png" class="u-logo-image u-logo-image-1" data-image-width="63">
         </a>
         <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1">
