--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	  <title>Home - AbsurdStudios</title>
 <link rel="stylesheet" href="Home.css" media="screen">
 	  <link rel="stylesheet" href="main2.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="main2.js" defer=""></script>
+    <script type="text/javascript" src="jquery.js" defer=""></script>
+    <script type="text/javascript" src="main2.js" defer=""></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
     
@@ -36,22 +36,28 @@
         <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem;">
             <a class="u-button-style u-nav-link" href="#">
-              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 302 302" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8a8f"></use></svg>
+              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 302 302" style="">
+		      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8a8f"></use></svg>
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="svg-8a8f" x="0px" y="0px" viewBox="0 0 302 302" style="enable-background:new 0 0 302 302;" xml:space="preserve" class="u-svg-content"><g><rect y="36" width="302" height="30"></rect><rect y="236" width="302" height="30"></rect><rect y="136" width="302" height="30"></rect>
 </g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g></svg>
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 60px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Team.html" style="padding: 10px 60px;">Team</a>
-</li></ul>
+            <ul class="u-nav u-unstyled u-nav-1">
+		    <li class="u-nav-item">
+			    <a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://absurdstudios.github.io/" style="padding: 10px 60px;">Home</a>
+</li>
+		    <li class="u-nav-item">
+			    <a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="https://absurdstudios.github.io/team" style="padding: 10px 60px;">Team</a>
+</li>
+		  </ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-align-center u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Team.html" style="padding: 10px 20px;">Team</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://absurdstudios.github.io/" style="padding: 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="https://absurdstudios.github.io/team/" style="padding: 10px 20px;">Team</a>
 </li></ul>
               </div>
             </div>
@@ -63,7 +69,7 @@
       <div class="u-align-center u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h2 class="u-text u-text-1">AbsurdStudios</h2>
         <p class="u-text u-text-2">Game development team/studio on Roblox.</p>
-        <a href="#" class="u-border-2 u-border-palette-3-base u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-none u-radius-12 u-btn-1">Roblox Group<br>
+        <a href="https://absurdstudios.github.io/group/" class="u-border-2 u-border-palette-3-base u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-none u-radius-12 u-btn-1">Roblox Group<br>
         </a>
       </div>
     </section>
