--- a/team/index.html
+++ b/team/index.html
@@ -31,8 +31,8 @@
     <meta property="og:url" content="index.html">
   </head>
   <body class="u-body"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-header" id="sec-3142"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://absurdstudios.github.io/" class="u-image u-logo u-image-1" data-image-width="150" data-image-height="150">
-          <img src="images/0dfbdc0ea33e28659ce19b47ddbaf280.png" class="u-logo-image u-logo-image-1" data-image-width="63">
+        <a href="https://absurdstudios.github.io/" class="u-image u-logo u-image-1" data-image-width="100" data-image-height="100">
+          <img src="https://absurdstudios.github.io/Logo.png" class="u-logo-image u-logo-image-1" data-image-width="63">
         </a>
         <nav class="u-align-left u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem;">
