--- a/team/index.html
+++ b/team/index.html
@@ -58,10 +58,10 @@
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
+                    <a class="u-button-style u-nav-link" href="https://absurdstudios.github.io/" style="padding: 10px 20px;">Home</a>
 </li>
                   <li class="u-nav-item">
-                    <a class="u-button-style u-nav-link" href="Team.html" style="padding: 10px 20px;">Team</a>
+                    <a class="u-button-style u-nav-link" href="https://absurdstudios.github.io/team" style="padding: 10px 20px;">Team</a>
 </li>
                 </ul>
               </div>
@@ -90,7 +90,7 @@
                 <div class="u-container-layout u-container-layout-2">
                   <h2 class="u-text u-text-1">Elijah</h2>
                   <p class="u-text u-text-2">Lead programmer and UI designer</p>
-                  <a href="" class="u-border-2 u-border-palette-3-base u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-none u-radius-8 u-btn-1">Read More</a>
+                  <a href="https://absurdstudios.github.io/team/elijah/" class="u-border-2 u-border-palette-3-base u-btn u-btn-round u-button-style u-custom-font u-font-montserrat u-none u-radius-8 u-btn-1">Read More</a>
                 </div>
               </div>
             </div>
